--- a/index.html
+++ b/index.html
@@ -1843,7 +1843,15 @@
                         keyword_count[key].push(d);
                     }
 
-                    // keyword other
+                    // keyword batching
+                    if (text_temp.includes('historic')) {
+                        let key = 'Historic';
+                        if (!(key in keyword_count)) {
+                            keyword_count[key] = [];
+                        }
+                        keyword_count[key].push(d);
+                    }
+
                     if (text_temp.includes('modified')) {
                         let key = 'Modified';
                         if (!(key in keyword_count)) {
@@ -1860,6 +1868,7 @@
                         keyword_count[key].push(d);
                     }
 
+                    // keyword other
                     if (text_temp.includes('you control an artifact and an enchantment')
                         || (text_temp.includes('you control an artifact') && text_temp.includes('you control an enchantment'))) {
                         let key = 'Harmony';
@@ -1877,8 +1886,16 @@
                         keyword_count[key].push(d);
                     }
 
-                    if (text_temp.includes('equal to its toughness')) {
-                        let key = 'Toughness';
+                    if (text_temp.includes('equal to its power')) {
+                        let key = 'Biting';
+                        if (!(key in keyword_count)) {
+                            keyword_count[key] = [];
+                        }
+                        keyword_count[key].push(d);
+                    }
+
+                    if (text_temp.includes('equal to its toughness') || text_temp.includes('backbone')) {
+                        let key = 'Backbone';
                         if (!(key in keyword_count)) {
                             keyword_count[key] = [];
                         }
