--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <br>
 
     <footer style="padding: 16px; background: #f9f9fb;">
-        <p>Using Scryfall REST API(api.scryfall.com)".</p>
+        <p>Using Scryfall REST API(api.scryfall.com).</p>
         <p>Thanks for <a href="https://scryfall.com/">Scryfall Magic: The Gathering Search</a>.</p>
     </footer>
 
